--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
         consequat.</p>
     </div>
   </section>
+  <section class="contato">
+    <h2>Fale Conosco</h2>
+    <form class="container">
+      <label for="Nome">Nome:
+        <input type="text" name="Nome" id="Nome">
+      </label>
+        <label for="email">E-mail:
+          <input type="email" name="email" id="email">
+        </label>
+        <h3>Sua mensagem:</h3>
+          <textarea name="mensagem" id="mensagem" cols="50" rows="4"></textarea>
+          <button>Enviar</button>
+    </form>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
