footer & adjust layout

--- a/index.html
+++ b/index.html
@@ -152,7 +152,20 @@
           <textarea name="mensagem" id="mensagem" cols="50" rows="4"></textarea>
           <button>Enviar</button>
     </form>
+    <hr>
   </section>
+  <footer>
+    <h2>Veloz Net</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, incidunt deserunt nostrum<br> qui beatae culpa maxime ullam soluta officia doloribus!</p>
+    <p>&copy; Ricardo Rocha - 2023 Todos direitos reservados</p>
+    <h3>Siga-Nos</h3>
+    <div class="social-icon-footer">
+      <ion-icon class="social-icon-footer-link" name="logo-facebook"></ion-icon>
+      <ion-icon class="social-icon-footer-link" name="logo-instagram"></ion-icon>
+      <ion-icon class="social-icon-footer-link" name="logo-youtube"></ion-icon>
+      <ion-icon class="social-icon-footer-link" name="logo-linkedin"></ion-icon>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
