responsivo mobile - <style>efeito nos links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="container-nav">
-      <h1><img src="img/icone.png" alt="">Veloz Net</h1>
+      <h1><img src="img/icone.png" alt="logo da veloz net">Veloz Net</h1>
       <ul class="nav-link">
         <li>
           <a class="nav-link-item" href="#">Sobre</a>
@@ -90,6 +90,7 @@
         <p>Veloz Net, muito mais velocidade</p>
       </div>
       <div class="linha"></div>
+      <hr class="row">
       <div class="content-p">
         <p>Nós Ligamos para você</p>
         <ion-icon class="icon-whats" name="logo-whatsapp"></ion-icon>
