responsivo tablet laptop adjust layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="sobre">
     <div class="container">
       <img src="img/veloznet.jpg" alt="homen usando oculos futurista de realidade aumentada">
-      <div class="sobre-veloznet">
+      <div class="sobre-content">
         <h2>Sobre Nós</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta enim natus, illum libero laudantium quo temporibus. Rerum quod cum reprehenderit possimus molestias iure debitis eos illum perspiciatis corrupti, ex earum!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eum consequuntur cumque autem reprehenderit omnis ipsam officia beatae cupiditate a?</p>
